--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="keywords" content="eps,uam,laboratorios,horario">
@@ -50,8 +50,8 @@
       </div>
       <footer>
         <hr>
-        <p>¿Dudas? ¿Problemas? Ponte en contacto&nbsp;<a href="http://github.com/ManuelBlanc">conmigo</a>.</p>
-      </footer>
+        <p>Tambien puede interesarte mi&nbsp;<a href="https://github.com/ManuelBlanc/eps-dotfiles">configuración</a> para los laboratorios.<small> (¿Has encontrado un problema? ¡Ponte en contacto&nbsp;<a href="http://github.com/ManuelBlanc">conmigo</a>!</small></p>
+      </footer><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" class="ribbon"><img src="img/github_ribbon.png" alt="Fork me on GitHub"></a>
     </div>
     <script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="lib/d3/d3.js"></script>
