--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>[michis.me] Laboratorios libres</title>
+    <title>[labs.michis.me] Laboratorios libres</title>
     <meta charset="utf-8">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,22 +24,22 @@
           <li id="8a" class="lab"></li>
           <li id="7" class="lab double"></li>
         </ul>
-        <ul class="lab-group south west">
-          <li id="9" class="lab"></li>
-          <li id="10" class="lab"></li>
-          <li id="11" class="lab"></li>
-          <li id="12" class="lab"></li>
+        <ul class="lab-group north east">
+          <li id="6b" class="lab"></li>
+          <li id="6a" class="lab"></li>
+          <li id="5b" class="lab"></li>
+          <li id="5a" class="lab"></li>
         </ul>
         <ul class="lab-group center">
           <li id="14" class="lab"></li>
           <li id="15" class="lab"></li>
           <li id="16" class="lab"></li>
         </ul>
-        <ul class="lab-group north east">
-          <li id="6b" class="lab"></li>
-          <li id="6a" class="lab"></li>
-          <li id="5b" class="lab"></li>
-          <li id="5a" class="lab"></li>
+        <ul class="lab-group south west">
+          <li id="9" class="lab"></li>
+          <li id="10" class="lab"></li>
+          <li id="11" class="lab"></li>
+          <li id="12" class="lab"></li>
         </ul>
         <ul class="lab-group south east">
           <li id="1" class="lab"></li>
@@ -50,11 +50,10 @@
       </div>
       <footer>
         <hr>
-        <p>Tambien puede interesarte mi&nbsp;<a href="https://github.com/ManuelBlanc/eps-dotfiles">configuración</a> para los laboratorios.<small> (¿Has encontrado un problema? ¡Ponte en contacto&nbsp;<a href="http://github.com/ManuelBlanc">conmigo</a>!</small></p>
-      </footer><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" class="ribbon"><img src="img/github_ribbon.png" alt="Fork me on GitHub"></a>
-    </div>
+        <p>¿Ya estas en un laboratorio? Tambien puede interesarte mi&nbsp;<a href="https://github.com/ManuelBlanc/eps-dotfiles">configuración</a> para los laboratorios.</p>
+      </footer>
+    </div><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" class="ribbon"><img src="img/github_ribbon.png" alt="Fork me on GitHub"></a>
     <script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="lib/d3/d3.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
