--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta name="description" content="¿Qué laboratorios estan libres? Compruebalo rapidamente.">
     <meta name="author" content="MBlanc">
     <link href="img/favicon.ico?v=1" rel="shortcut icon" type="image/x-icon">
-    <link rel="stylesheet" href="style.css"><!--[if lt IE 9]>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="app.js"></script><!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body>
@@ -52,8 +54,6 @@
         <hr>
         <p>¿Ya estas en un laboratorio? Tambien puede interesarte mi&nbsp;<a href="https://github.com/ManuelBlanc/eps-dotfiles">configuración</a> para los laboratorios.</p>
       </footer>
-    </div><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" class="ribbon"><img src="img/github_ribbon.png" alt="Fork me on GitHub"></a>
-    <script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    </div>
   </body>
 </html>
