Arreglado zooming en disposivos moviles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=0.5,maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="keywords" content="eps,uam,laboratorios,horario">
@@ -55,9 +55,9 @@
           <div id="15" class="lab"></div>
           <div id="16" class="lab"></div>
         </div>
-      </div>
+      </div><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" title="Fork me on GitHub" class="ribbon"></a>
     </div>
-    <footer><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" title="Fork me on GitHub" class="ribbon"></a>
+    <footer>
       <hr>
       <p>Creado con <span class='heart'></span> por&nbsp;<a href="http://github.com/ManuelBlanc" target="_blank">Manuel Blanc.</a><small> ¡Gracias a todos los que me echaron un cable!</small>
       </p>
