--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h2 class="text-center">¿Qué&nbsp;laboratorios estan&nbsp;libres?</h2>
+      <h2 class="text-center">¿Qué&nbsp;<strong>laboratorio</strong> está&nbsp;<strong>libre</strong>?</h2>
       <div class="floorplan">
         <div class="west">
           <div class="north">
