Mas contraste en el texto, texto en el corazon

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
     <footer>
       <hr>
-      <p>Creado con <span class='heart'></span> por&nbsp;<a href="http://github.com/ManuelBlanc" target="_blank">Manuel Blanc.</a><small> ¡Gracias a todos los que me echaron un cable!</small>
+      <p>Creado con <span class='heart'>cariño</span> por&nbsp;<a href="http://github.com/ManuelBlanc" target="_blank">Manuel Blanc.</a><small> ¡Gracias a todos los que me echaron un cable!</small>
       </p>
     </footer>
   </body>
