Mejoras menores en varios aspectos

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           <div id="15" class="lab"></div>
           <div id="16" class="lab"></div>
         </div>
-      </div><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" title="Fork me on GitHub" class="ribbon"></a>
+      </div>
     </div>
     <footer>
       <hr>
       <p>Creado con <span class='heart'>cariño</span> por&nbsp;<a href="http://github.com/ManuelBlanc" target="_blank">Manuel Blanc.</a><small> ¡Gracias a todos los que me echaron un cable!</small>
-      </p>
+      </p><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" title="Fork me on GitHub" class="ribbon">El codigo fuente esta disponible en GitHub.</a>
     </footer>
   </body>
 </html>
