Updated ribbon URL

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <footer>
       <hr>
       <p>Creado con <span class='heart'>cariño</span> por&nbsp;<a href="http://github.com/ManuelBlanc" target="_blank">Manuel Blanc.</a><small> ¡Gracias a todos los que me echaron un cable!</small>
-      </p><a href="https://github.com/ManuelBlanc/ManuelBlanc.github.io" title="Fork me on GitHub" class="ribbon">Fork me on GitHub</a>
+      </p><a href="https://github.com/ManuelBlanc/eps-free-labs" title="Fork me on GitHub" class="ribbon">Fork me on GitHub</a>
     </footer>
   </body>
 </html>
